--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/react-dom": "^16.9.8",
+    "axios": "^1.6.2",
     "react": "16.8",
     "react-dom": "16.8",
     "react-scripts": "3.4.1",
